<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutRectangle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RectangleFragment">

    <TextView
        android:id="@+id/textViewRectangleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/rectangle"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewRectangleBaseLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRectangleBaseLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        android:text="@string/rectangle_base_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewRectangleHeightLabel"
        app:layout_constraintEnd_toStartOf="@+id/editTextRectangleBase"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextRectangleBase"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/rectangle_base"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewRectangleBaseLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewRectangleBaseLabel" />

    <TextView
        android:id="@+id/textViewRectangleHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:gravity="center_vertical"
        android:text="@string/rectangle_height_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonComputePerimeter"
        app:layout_constraintEnd_toStartOf="@+id/editTextRectangleHeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextRectangleHeight"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/rectangle_height"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewRectangleHeightLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewRectangleHeightLabel" />

    <Button
        android:id="@+id/buttonComputePerimeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/button_perimeter"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewRectangleOutput"
        app:layout_constraintEnd_toStartOf="@+id/buttonComputeArea"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonComputeArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_area"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonComputePerimeter"
        app:layout_constraintTop_toTopOf="@+id/buttonComputePerimeter" />

    <TextView
        android:id="@+id/textViewRectangleOutput"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>